# web_crawler

./: .gitignore  Cargo.toml  index.txt
src/: helper_functions.rs  main.rs  main_functions.rs  script.rs  test.rs
