[package]
name = "web_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discv5 = "0.2.1"
tokio = { version = "1.26.0", features = ["full"] }
rand = "0.8.5"
enr = { version = "*", features = ["serde", "ed25519", "rust-secp256k1"] }
k256 = "0.13.0"

# lighthouse_network =  { path = "../lighthouse/beacon_node/lighthouse_network" }
