[package]
name = "web_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discv5 = "0.2.1"
tokio = { version = "1.26.0", features = ["full"] }
rand = "0.8.5"
enr = { version = "*", features = ["serde", "ed25519", "rust-secp256k1"] }
k256 = "0.13.0"
serde_json = "1.0.94"
bincode = "1.3.3"
rlp = "0.5.2"
num-bigint = "0.4.3"
num-traits = "0.2.15"
